[gd_scene load_steps=3 format=3 uid="uid://bmab6jl3m2u2t"]

[ext_resource type="Script" path="res://menu_control.gd" id="1_j3vng"]
[ext_resource type="Texture2D" uid="uid://bnpdhu2rgf71x" path="res://tetris bg.png" id="2_pbi5p"]

[node name="Menu Control" type="Control" groups=["menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3vng")

[node name="TetrisBg" type="Sprite2D" parent="."]
position = Vector2(1151.19, 648)
scale = Vector2(1.93274, 1.93165)
texture = ExtResource("2_pbi5p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 903.0
offset_top = 222.0
offset_right = 1368.0
offset_bottom = 1151.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Falling Speed"
fit_content = true

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music - sike this doesn't work :)"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
